Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Sacombank và Microsoft Việt Nam ký kết hợp tác chiến lược về AI và dữ liệu",
+    "content": "Sacombank và Microsoft Việt Nam đã ký kết thỏa thuận hợp tác chiến lược nhằm thúc đẩy ứng dụng trí tuệ nhân tạo (AI) và dữ liệu trong ngành tài chính - ngân hàng. Hợp tác này không chỉ giúp Sacombank nâng cao năng lực công nghệ mà còn thúc đẩy xu hướng ngân hàng sử dụng AI tại Việt Nam. Hai bên sẽ cùng thực hiện nhiều dự án quan trọng, bao gồm tư vấn chiến lược và đào tạo nhân lực về AI, nhằm hiện thực hóa mục tiêu chuyển đổi số của Sacombank.",
+    "link": "https://tuoitre.vn/sacombank-va-microsoft-viet-nam-ky-ket-hop-tac-chien-luoc-ve-ai-va-du-lieu-20250312172026278.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sacombank và Microsoft Việt Nam đã ký kết hợp tác về lĩnh vực gì?",
+    "answers": [
+      {
+        "text": "AI và dữ liệu",
+        "correct": true
+      },
+      {
+        "text": "Bất động sản",
+        "correct": false
+      },
+      {
+        "text": "Marketing",
+        "correct": false
+      },
+      {
+        "text": "Giáo dục",
+        "correct": false
+      },
+      {
+        "text": "Y tế",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đậu phụ chiên xù",
+    "content": "Đậu phụ chiên xù là món ăn hấp dẫn với lớp vỏ vàng ruộm, xù bông và bên trong vẫn giữ được độ béo mềm. Để chế biến, nguyên liệu chính bao gồm đậu phụ, trứng gà và bột chiên xù. Quy trình làm món này bao gồm việc chuẩn bị đậu, bao áo bột và chiên với lửa vừa để đạt được độ giòn mà không cháy. Món ăn thường được ăn kèm với tương ớt hoặc sốt mayonnaise.",
+    "link": "https://vnexpress.net/doi-song-cooking-dau-phu-chien-xu-4859259.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 6,
+    "question": "Cách làm món đậu phụ chiên xù như thế nào?",
+    "answers": [
+      {
+        "text": "Cần sử dụng đậu phụ, trứng gà và bột chiên xù.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần đậu và nước.",
+        "correct": false
+      },
+      {
+        "text": "Dùng thịt xay và rau củ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần chiên đậu phụ không cần bột.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khách hàng tố Baby Three nghi in 'đường lưỡi bò': Cục quản lý và phát triển thị trường kiểm tra",
     "content": "Khách hàng đã tố cáo sản phẩm búp bê Baby Three có in hình đường lưỡi bò phi pháp, dẫn đến việc Cục Quản lý và Phát triển thị trường chỉ đạo kiểm tra sản phẩm này. Ông Trần Hữu Linh, cục trưởng cục, khẳng định mọi sản phẩm có hình ảnh đường lưỡi bò sẽ bị xử lý nghiêm theo quy định pháp luật. Trên mạng xã hội, người tiêu dùng đang kêu gọi tẩy chay sản phẩm này do những nghi vấn liên quan đến chủ quyền lãnh thổ Việt Nam.",
     "link": "https://tuoitre.vn/khach-hang-to-baby-three-nghi-in-duong-luoi-bo-cuc-quan-ly-va-phat-trien-thi-truong-kiem-tra-2025031216132456.htm",
@@ -161,6 +219,60 @@
       },
       {
         "text": "Bộ trưởng, Chủ nhiệm Văn phòng Chính phủ Trần Văn Sơn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "answers": [
+      {
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "correct": false
+      },
+      {
+        "text": "Rau củ quả không có tác dụng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
@@ -1287,33 +1399,6 @@
     ]
   },
   {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
-    "answers": [
-      {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
-        "correct": false
-      },
-      {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
     "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
     "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
@@ -1336,6 +1421,33 @@
       },
       {
         "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "answers": [
+      {
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "correct": false
+      },
+      {
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "correct": false
+      },
+      {
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -1507,33 +1619,6 @@
     ]
   },
   {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -1560,6 +1645,33 @@
       },
       {
         "text": "Đau bụng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -4405,37 +4517,6 @@
     ]
   },
   {
-    "title": "Ai dễ bị ngưng thở khi ngủ?",
-    "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
-    "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ai là đối tượng dễ mắc hội chứng ngưng thở khi ngủ?",
-    "answers": [
-      {
-        "text": "Trẻ em",
-        "correct": true
-      },
-      {
-        "text": "Người lớn",
-        "correct": false
-      },
-      {
-        "text": "Người cao tuổi",
-        "correct": false
-      },
-      {
-        "text": "Phụ nữ mang thai",
-        "correct": false
-      },
-      {
-        "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
     "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
     "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
@@ -4463,32 +4544,32 @@
     ]
   },
   {
-    "title": "Thanh tra thuế bị tố giả mạo biên bản, công an Lâm Đồng vào cuộc",
-    "content": "Công an tỉnh Lâm Đồng đang điều tra vụ việc liên quan đến tố cáo của giám đốc Công ty Sao Đà Lạt về việc đoàn Thanh tra Cục Thuế tỉnh giả mạo biên bản đối thoại. Ông Trịnh Bá Dũng cho rằng các biên bản này không phản ánh đúng thực tế và không có hoạt động đối thoại với công ty. Cục Thuế Lâm Đồng khẳng định biên bản là thật và đang giải thích về các nội dung liên quan đến kiểm tra thuế của công ty.",
-    "link": "https://tuoitre.vn/thanh-tra-thue-bi-to-gia-mao-bien-ban-cong-an-lam-dong-vao-cuoc-20250310212721275.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Công an Lâm Đồng đang điều tra vụ việc gì liên quan đến Cục Thuế?",
+    "title": "Ai dễ bị ngưng thở khi ngủ?",
+    "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
+    "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ai là đối tượng dễ mắc hội chứng ngưng thở khi ngủ?",
     "answers": [
       {
-        "text": "Tố cáo giả mạo biên bản thanh tra thuế",
+        "text": "Trẻ em",
         "correct": true
       },
       {
-        "text": "Vụ án hình sự về tham nhũng",
+        "text": "Người lớn",
         "correct": false
       },
       {
-        "text": "Kiểm tra tài chính định kỳ",
+        "text": "Người cao tuổi",
         "correct": false
       },
       {
-        "text": "Đình chỉ hoạt động của Cục Thuế",
+        "text": "Phụ nữ mang thai",
         "correct": false
       },
       {
-        "text": "Thay đổi lãnh đạo Cục Thuế",
+        "text": "Người có bệnh tim mạch",
         "correct": false
       }
     ]
