--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Đắk Lắk 'ghi nhận, rút kinh nghiệm' các góp ý của khán giả về đêm khai mạc lễ hội cà phê",
+    "content": "Sau đêm khai mạc Lễ hội Cà phê Buôn Ma Thuột lần thứ 9, nhiều khán giả đã phản ánh về một số thiếu sót trong khâu tổ chức, như việc không giới thiệu đầy đủ tác giả của bài hát và thiếu phiên dịch cho diễn giả quốc tế. Lãnh đạo UBND tỉnh Đắk Lắk đã ghi nhận các ý kiến góp ý và cam kết rút kinh nghiệm cho các chương trình tiếp theo. Ông Nguyễn Tuấn Hà, phó chủ tịch UBND tỉnh, thừa nhận các thiếu sót và hứa sẽ kiểm tra để tránh lặp lại trong tương lai.",
+    "link": "https://tuoitre.vn/dak-lak-ghi-nhan-rut-kinh-nghiem-cac-gop-y-cua-khan-gia-ve-dem-khai-mac-le-hoi-ca-phe-20250312164140143.htm",
+    "cat": "du-lich",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Đắk Lắk đã ghi nhận những góp ý nào từ khán giả về lễ hội cà phê?",
+    "answers": [
+      {
+        "text": "Thiếu sót trong giới thiệu tác giả bài hát và không có phiên dịch cho diễn giả quốc tế.",
+        "correct": true
+      },
+      {
+        "text": "Đã tổ chức rất tốt và không có lỗi nào được phê bình.",
+        "correct": false
+      },
+      {
+        "text": "Lễ hội đã hoàn toàn thành công mà không cần góp ý.",
+        "correct": false
+      },
+      {
+        "text": "Ban tổ chức quyết định không thay đổi gì cho các lần sau.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sacombank và Microsoft Việt Nam ký kết hợp tác chiến lược về AI và dữ liệu",
     "content": "Sacombank và Microsoft Việt Nam đã ký kết thỏa thuận hợp tác chiến lược nhằm thúc đẩy ứng dụng trí tuệ nhân tạo (AI) và dữ liệu trong ngành tài chính - ngân hàng. Hợp tác này không chỉ giúp Sacombank nâng cao năng lực công nghệ mà còn thúc đẩy xu hướng ngân hàng sử dụng AI tại Việt Nam. Hai bên sẽ cùng thực hiện nhiều dự án quan trọng, bao gồm tư vấn chiến lược và đào tạo nhân lực về AI, nhằm hiện thực hóa mục tiêu chuyển đổi số của Sacombank.",
     "link": "https://tuoitre.vn/sacombank-va-microsoft-viet-nam-ky-ket-hop-tac-chien-luoc-ve-ai-va-du-lieu-20250312172026278.htm",
@@ -1820,28 +1847,28 @@
     ]
   },
   {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
     "answers": [
       {
-        "text": "Thay khớp gối phải",
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
         "correct": true
       },
       {
-        "text": "Khám bệnh khác",
+        "text": "Canxi, vitamin A, vitamin E",
         "correct": false
       },
       {
-        "text": "Tham quan du lịch",
+        "text": "Chất xơ, omega-3, vitamin K",
         "correct": false
       },
       {
-        "text": "Học tiếng Việt",
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -1874,28 +1901,28 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
+    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
+    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
     "answers": [
       {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "text": "Thay khớp gối phải",
         "correct": true
       },
       {
-        "text": "Canxi, vitamin A, vitamin E",
+        "text": "Khám bệnh khác",
         "correct": false
       },
       {
-        "text": "Chất xơ, omega-3, vitamin K",
+        "text": "Tham quan du lịch",
         "correct": false
       },
       {
-        "text": "Protein, selen, vitamin B9",
+        "text": "Học tiếng Việt",
         "correct": false
       }
     ]
@@ -2751,6 +2778,37 @@
     ]
   },
   {
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "answers": [
+      {
+        "text": "Bệnh sởi",
+        "correct": true
+      },
+      {
+        "text": "Ngộ độc thực phẩm",
+        "correct": false
+      },
+      {
+        "text": "Nhiễm trùng đường tiêu hóa",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Béo phì, bệnh chồng bệnh",
     "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
     "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
@@ -2800,37 +2858,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến gan mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
-    "answers": [
-      {
-        "text": "Bệnh sởi",
-        "correct": true
-      },
-      {
-        "text": "Ngộ độc thực phẩm",
-        "correct": false
-      },
-      {
-        "text": "Nhiễm trùng đường tiêu hóa",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
