Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Trung vệ Duy Mạnh: 'Đấu Campuchia và Lào không dễ'",
+    "content": "Trung vệ Đỗ Duy Mạnh, đội trưởng tuyển Việt Nam, đã cảnh giác trước hai trận đấu sắp tới với Campuchia và Lào, dù hai đội bóng này được đánh giá yếu hơn. Mặc dù Việt Nam đã thắng Lào 4-1 tại ASEAN Cup, Duy Mạnh vẫn nhấn mạnh rằng các trận đấu tới sẽ không dễ dàng. Anh cũng bày tỏ mong muốn các cầu thủ mới trong đội tuyển nhanh chóng thích nghi để cống hiến cho đội bóng.",
+    "link": "https://vnexpress.net/trung-ve-duy-manh-dau-campuchia-va-lao-khong-de-4860567.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Duy Mạnh nhấn mạnh điều gì về các trận đấu với Campuchia và Lào sắp tới?",
+    "answers": [
+      {
+        "text": "Các trận đấu không dễ dàng.",
+        "correct": true
+      },
+      {
+        "text": "Việt Nam sẽ thắng dễ dàng.",
+        "correct": false
+      },
+      {
+        "text": "Campuchia và Lào đều mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Đội tuyển không cần tập luyện nhiều.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Carlsen bất cẩn, để hòa pat",
     "content": "Kỳ thủ Magnus Carlsen, hiện đang giữ vị trí số một thế giới, đã mắc lỗi nghiêm trọng trong trận đấu tại giải cờ chớp Titled Tuesday, dẫn đến hòa pat sau khi anh không còn nước đi hợp lệ. Trong thế cờ, Carlsen có lợi thế nhưng đã đi một nước khiến ván cờ kết thúc hòa, điều này đã xảy ra lần thứ ba đối với anh trong vài tháng qua. Mặc dù Titled Tuesday không phải là giải đấu lớn, nhưng sự bất cẩn trong các nước đi đã khiến Carlsen không thể bảo toàn chiến thắng.",
     "link": "https://vnexpress.net/carlsen-bat-can-de-hoa-pat-4860562.html",
@@ -493,6 +520,33 @@
       },
       {
         "text": "Vì anh không đủ thời gian để suy nghĩ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chấn thương sọ não do chìa khóa cắm sâu vào đầu",
+    "content": "Một nam sinh 14 tuổi đã bị chấn thương sọ não do chìa khóa cắm sâu vào đầu, xuyên qua xương sọ và gần nhu mô não. Sau khi phẫu thuật khẩn cấp tại Bệnh viện Trung ương Quân đội 108, các bác sĩ đã thành công trong việc loại bỏ dị vật mà không gây tổn thương thêm. Hiện tại, sức khỏe của bệnh nhân đã ổn định và được xuất viện. Các bác sĩ nhấn mạnh tầm quan trọng của việc giáo dục an toàn cho trẻ em để giảm thiểu rủi ro tai nạn.",
+    "link": "https://vnexpress.net/chan-thuong-so-nao-do-chia-khoa-cam-sau-vao-dau-4860484.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Nam sinh bị chấn thương sọ não do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Chìa khóa cắm sâu vào đầu",
+        "correct": true
+      },
+      {
+        "text": "Ngã từ trên cao",
+        "correct": false
+      },
+      {
+        "text": "Đánh nhau với bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Chơi gần nơi có vật sắc nhọn",
         "correct": false
       }
     ]
@@ -1421,33 +1475,6 @@
     ]
   },
   {
-    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
-    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
-    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
-    "answers": [
-      {
-        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
-        "correct": true
-      },
-      {
-        "text": "Cà chua, khoai tây, bí ngô",
-        "correct": false
-      },
-      {
-        "text": "Nho, chuối, xoài, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, khoai lang, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
     "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
     "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
@@ -1474,6 +1501,33 @@
       },
       {
         "text": "12.000 ôtô điện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
@@ -2793,33 +2847,6 @@
     ]
   },
   {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -2846,6 +2873,33 @@
       },
       {
         "text": "Đau bụng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -3504,33 +3558,6 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng nguy hiểm của viêm gan E",
     "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
     "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
@@ -3553,6 +3580,33 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -5211,33 +5265,6 @@
       },
       {
         "text": "David Lynch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quá khứ nổi loạn của tài tử \"Nữ hoàng nước mắt\" Kim Soo Hyun",
-    "content": "Kim Soo Hyun, tài tử nổi tiếng Hàn Quốc với vai diễn trong \"Nữ hoàng nước mắt\", từng có một quá khứ nổi loạn với nhiều sai lầm trong tuổi trẻ. Anh trải qua thời thơ ấu khó khăn do cha mẹ ly hôn và từng vướng vào bê bối như uống rượu hay tới hộp đêm khi còn trẻ. Mặc dù có quá khứ gây tranh cãi, Kim Soo Hyun hiện tại đã trở thành một trong những diễn viên có thu nhập cao nhất Hàn Quốc và sở hữu khối tài sản lớn.",
-    "link": "https://dantri.com.vn/giai-tri/qua-khu-noi-loan-cua-tai-tu-nu-hoang-nuoc-mat-kim-soo-hyun-20250311163103684.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quá khứ nổi loạn của Kim Soo Hyun có những điểm gì đặc biệt?",
-    "answers": [
-      {
-        "text": "Anh từng uống rượu và tới hộp đêm khi còn trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Kim Soo Hyun không có bất kỳ sai lầm nào trong quá khứ.",
-        "correct": false
-      },
-      {
-        "text": "Anh chỉ có một tuổi thơ hạnh phúc và không bị ảnh hưởng bởi gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Tài tử này không kiếm được nhiều tiền từ diễn xuất.",
         "correct": false
       }
     ]
