--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "TP.HCM tăng cường các biện pháp ứng phó tăng giá thịt heo",
+    "content": "UBND TP.HCM đã yêu cầu các sở ngành theo dõi tình hình cung ứng thịt heo và chuẩn bị các phương án ứng phó nếu giá tiếp tục tăng. Thành phố sẽ làm việc với các tỉnh cung cấp heo hơi để đảm bảo nguồn cung và không để xảy ra tình trạng thiếu hàng. Các biện pháp quản lý giá sẽ được thực hiện để ổn định thị trường, đồng thời các doanh nghiệp sẽ tham gia xây dựng kế hoạch dự trữ hàng hóa với giá hợp lý nhằm kích thích tiêu dùng.",
+    "link": "https://tuoitre.vn/tp-hcm-tang-cuong-cac-bien-phap-ung-pho-tang-gia-thit-heo-20250312175034134.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "TP.HCM đã có những biện pháp gì để ứng phó với sự tăng giá thịt heo?",
+    "answers": [
+      {
+        "text": "Theo dõi tình hình cung ứng và chuẩn bị phương án ứng phó",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường nhập khẩu thịt heo từ nước ngoài",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá bán thịt heo trên thị trường",
+        "correct": false
+      },
+      {
+        "text": "Ngừng sản xuất thịt heo trong thời gian tới",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiền đạo Nguyễn Đình Bắc gãy xương bàn chân",
     "content": "Tiền đạo Nguyễn Đình Bắc đã gặp chấn thương trong buổi tập chiều 12/3 cùng đội tuyển U22 Việt Nam, bị gãy xương bàn ngón số 5. Sau khi được đưa đến bệnh viện, bác sĩ đã nắn chỉnh và bó bột cho anh. Dự kiến, thời gian hồi phục của Đình Bắc sẽ kéo dài từ bốn đến tám tuần, khiến anh phải bỏ dở đợt tập luyện cùng U22 Việt Nam. Nếu hồi phục tốt, anh có thể trở lại thi đấu vào tháng 6.",
     "link": "https://vnexpress.net/tien-dao-nguyen-dinh-bac-gay-xuong-ban-chan-4860572.html",
@@ -619,6 +646,33 @@
     ]
   },
   {
+    "title": "Người bệnh suy giáp nên giảm cân thế nào",
+    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
+    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn thịt đỏ.",
+        "correct": false
+      },
+      {
+        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau quả hoàn toàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -645,33 +699,6 @@
       },
       {
         "text": "Vấn đề tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người bệnh suy giáp nên giảm cân thế nào",
-    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
-    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
-    "answers": [
-      {
-        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn thịt đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
-        "correct": false
-      },
-      {
-        "text": "Tránh ăn rau quả hoàn toàn.",
         "correct": false
       }
     ]
@@ -1183,6 +1210,33 @@
     ]
   },
   {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
     "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
     "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
@@ -1209,33 +1263,6 @@
       },
       {
         "text": "12.000 ôtô điện",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
-    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
-    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
-    "answers": [
-      {
-        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
-        "correct": true
-      },
-      {
-        "text": "Cà chua, khoai tây, bí ngô",
-        "correct": false
-      },
-      {
-        "text": "Nho, chuối, xoài, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
@@ -2362,33 +2389,6 @@
     ]
   },
   {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
-    "answers": [
-      {
-        "text": "Thay khớp gối phải",
-        "correct": true
-      },
-      {
-        "text": "Khám bệnh khác",
-        "correct": false
-      },
-      {
-        "text": "Tham quan du lịch",
-        "correct": false
-      },
-      {
-        "text": "Học tiếng Việt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
     "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
     "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
@@ -2438,6 +2438,33 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
+    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
+    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
+    "answers": [
+      {
+        "text": "Thay khớp gối phải",
+        "correct": true
+      },
+      {
+        "text": "Khám bệnh khác",
+        "correct": false
+      },
+      {
+        "text": "Tham quan du lịch",
+        "correct": false
+      },
+      {
+        "text": "Học tiếng Việt",
         "correct": false
       }
     ]
@@ -3293,33 +3320,6 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
-    "answers": [
-      {
-        "text": "Suy gan cấp và biến chứng thần kinh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây triệu chứng nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng gì",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -3346,6 +3346,33 @@
       },
       {
         "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -4969,37 +4996,6 @@
       },
       {
         "text": "300",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mỹ nam Gen Z Nhật Bản gây sốt tại show diễn trông như nhà vệ sinh khổng lồ",
-    "content": "Tại Tuần lễ thời trang Paris, buổi trình diễn Valentino Thu - Đông 2025 đã thu hút sự chú ý khi có sự xuất hiện của mỹ nam Gen Z Nhật Bản, Shunsuke Michieda. Anh gây ấn tượng với bộ suit phi giới tính và phong cách thời trang độc đáo. Bối cảnh của show diễn được thiết kế như một nhà vệ sinh công cộng khổng lồ, với ánh sáng đỏ và âm thanh đặc trưng, thể hiện một phong cách siêu thực và đầy sáng tạo của nhà thiết kế Alessandro Michele.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-gen-z-nhat-ban-gay-sot-tai-show-dien-trong-nhu-nha-ve-sinh-khong-lo-20250311102208770.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Ai là mỹ nam Gen Z Nhật Bản nổi bật tại show diễn Valentino?",
-    "answers": [
-      {
-        "text": "Shunsuke Michieda",
-        "correct": true
-      },
-      {
-        "text": "Jeff Satur",
-        "correct": false
-      },
-      {
-        "text": "Freen Sarocha Chankimha",
-        "correct": false
-      },
-      {
-        "text": "Alessandro Michele",
-        "correct": false
-      },
-      {
-        "text": "David Lynch",
         "correct": false
       }
     ]
