--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Ông Lavrov: Nga \"tự làm bỏng tay\" nhiều lần khi giao dịch với phương Tây",
+    "content": "Ngoại trưởng Nga, Sergei Lavrov, đã chỉ trích các nước phương Tây, đặc biệt là Anh và Pháp, về việc đề xuất triển khai lực lượng gìn giữ hòa bình tại Ukraine. Ông cho rằng Nga đã \"tự làm bỏng tay\" nhiều lần trong các giao dịch với phương Tây và nhấn mạnh rằng Ukraine đã tự làm suy yếu lợi ích của mình. Lavrov cũng chỉ ra rằng các cuộc đàm phán hòa bình trước đây đã bị bỏ lỡ do sự can thiệp của các nước phương Tây.",
+    "link": "https://dantri.com.vn/the-gioi/ong-lavrov-nga-tu-lam-bong-tay-nhieu-lan-khi-giao-dich-voi-phuong-tay-20250312201125687.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Ông Lavrov đã nói gì về việc Nga và phương Tây giao dịch?",
+    "answers": [
+      {
+        "text": "Nga đã \"tự làm bỏng tay\" nhiều lần khi giao dịch với phương Tây.",
+        "correct": true
+      },
+      {
+        "text": "Nga luôn đạt được lợi ích trong các giao dịch với phương Tây.",
+        "correct": false
+      },
+      {
+        "text": "Ukraine đã thành công trong việc bảo vệ lợi ích của mình.",
+        "correct": false
+      },
+      {
+        "text": "Các nước phương Tây hoàn toàn tin tưởng vào Nga.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TP.HCM tăng cường các biện pháp ứng phó tăng giá thịt heo",
     "content": "UBND TP.HCM đã yêu cầu các sở ngành theo dõi tình hình cung ứng thịt heo và chuẩn bị các phương án ứng phó nếu giá tiếp tục tăng. Thành phố sẽ làm việc với các tỉnh cung cấp heo hơi để đảm bảo nguồn cung và không để xảy ra tình trạng thiếu hàng. Các biện pháp quản lý giá sẽ được thực hiện để ổn định thị trường, đồng thời các doanh nghiệp sẽ tham gia xây dựng kế hoạch dự trữ hàng hóa với giá hợp lý nhằm kích thích tiêu dùng.",
     "link": "https://tuoitre.vn/tp-hcm-tang-cuong-cac-bien-phap-ung-pho-tang-gia-thit-heo-20250312175034134.htm",
@@ -1591,28 +1618,32 @@
     ]
   },
   {
-    "title": "Rau củ quả nào tốt cho não?",
-    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
-    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
-    "cat": "suc-khoe",
+    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
+    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
+    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
+    "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "importance": 9,
+    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
     "answers": [
       {
-        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "text": "Hơn 12.500 ôtô điện",
         "correct": true
       },
       {
-        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "text": "10.000 ôtô điện",
         "correct": false
       },
       {
-        "text": "Rau củ quả không có tác dụng gì.",
+        "text": "15.000 ôtô điện",
         "correct": false
       },
       {
-        "text": "Chỉ một số loại rau củ mới tốt cho não.",
+        "text": "8.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "12.000 ôtô điện",
         "correct": false
       }
     ]
@@ -1645,32 +1676,28 @@
     ]
   },
   {
-    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
-    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
-    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
-    "cat": "kinh-doanh",
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 9,
-    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
     "answers": [
       {
-        "text": "Hơn 12.500 ôtô điện",
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
         "correct": true
       },
       {
-        "text": "10.000 ôtô điện",
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
         "correct": false
       },
       {
-        "text": "15.000 ôtô điện",
+        "text": "Rau củ quả không có tác dụng gì.",
         "correct": false
       },
       {
-        "text": "8.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "12.000 ôtô điện",
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
         "correct": false
       }
     ]
@@ -2770,33 +2797,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -2846,6 +2846,33 @@
       },
       {
         "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -3732,33 +3759,6 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
-    "answers": [
-      {
-        "text": "Suy gan cấp và biến chứng thần kinh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây triệu chứng nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng gì",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì, bệnh chồng bệnh",
     "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
     "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
@@ -3781,6 +3781,33 @@
       },
       {
         "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
