--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nghiên cứu mở đường bay đến Ba Lan, Séc, Thụy Sĩ",
+    "content": "Cục Hàng không Việt Nam đã đề nghị các hãng hàng không trong nước mở đường bay trực tiếp đến Ba Lan, Cộng hòa Czech và Liên bang Thụy Sĩ nhằm thúc đẩy du lịch. Việc này hỗ trợ cho Chương trình kích cầu phát triển du lịch năm 2025, nhất là sau khi Việt Nam miễn thị thực cho công dân của ba quốc gia này. Các hãng hàng không cũng được khuyến khích phối hợp với Cục Du lịch Quốc gia Việt Nam để xây dựng các tour trọn gói hấp dẫn.",
+    "link": "https://vnexpress.net/nghien-cuu-mo-duong-bay-den-ba-lan-sec-thuy-si-4860580.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cục Hàng không Việt Nam đang nghiên cứu mở đường bay đến những quốc gia nào?",
+    "answers": [
+      {
+        "text": "Ba Lan, Cộng hòa Czech, Liên bang Thụy Sĩ",
+        "correct": true
+      },
+      {
+        "text": "Mỹ, Canada, Úc",
+        "correct": false
+      },
+      {
+        "text": "Anh, Pháp, Đức",
+        "correct": false
+      },
+      {
+        "text": "Nhật Bản, Hàn Quốc, Singapore",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xem xét điều chỉnh quy định để máy bay Comac hoạt động tại Việt Nam",
     "content": "Cục Hàng không Việt Nam đang xem xét điều chỉnh các tiêu chuẩn chứng nhận để máy bay Comac, đặc biệt là mẫu ARJ21-700, có thể hoạt động tại Việt Nam. Việc này bao gồm việc hợp tác với Tập đoàn Máy bay Thương mại Trung Quốc (Comac) và Cục Hàng không Dân dụng Trung Quốc (CAAC) để đánh giá các tiêu chuẩn thiết kế và khai thác. Việc công nhận máy bay Comac được kỳ vọng sẽ giúp giải quyết tình trạng thiếu hụt máy bay ở Việt Nam và mở ra cơ hội phát triển cho ngành hàng không.",
     "link": "https://vnexpress.net/xem-xet-dieu-chinh-quy-dinh-de-may-bay-comac-hoat-dong-tai-viet-nam-4860589.html",
